@@ -1,3 +1,9 @@
+1999-10-19  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>
+
+	* docs/Makefile.am (man_MANS): Added mbchk.1.
+	[MAINTAINER_MODE] (mbchk.1): New target.
+	* docs/mbchk.1: New file. Generated by help2man.
+	
 1999-10-18  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>
 
 	* Makefile.am (SUBDIRS): Added util.
